--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta name="twitter:description" content="Product Manager with proven track record at Tinder and Ablo. Expert in growth, monetization, user engagement.">
     <link rel="canonical" href="https://fernandocaldeira.info">
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <!-- Top Navigation -->
