description of title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fernando Caldeira - Product Manager | Tinder, Ablo | Portugal</title>
+    <title>Fernando Caldeira - Product</title>
     <meta name="description" content="Product Manager with proven track record at Tinder and Ablo. Expert in growth, monetization, user engagement. Based in Portugal. Available for product leadership roles.">
     <meta name="keywords" content="Fernando Caldeira, Product Manager, Product Development, Tinder, Ablo, Portugal, Growth, Monetization, User Engagement, Product Strategy, Consumer Tech, Mobile Apps">
     <meta name="author" content="Fernando Caldeira">
