--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Learn more about Fernando Caldeira - Product Manager with design background, passionate about solving problems at the intersection of design, technology, and business.">
     <meta name="keywords" content="Fernando Caldeira, Product Manager, About, Personal, Portugal, Design Background, Product Development">
     <meta name="author" content="Fernando Caldeira">
-    <link rel="stylesheet" href="assets/css/about.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <!-- Top Navigation -->
