--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
             </p>
         </header>
 
-        <nav>
-            <ul>
-                <li><a href="#experience" class="nav-link active">Experience</a></li>
-                <li><a href="#past-roles" class="nav-link">Past Roles</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
-            </ul>
-        </nav>
+        <main>
+            <nav>
+                <ul>
+                    <li><a href="#experience" class="nav-link active">Experience</a></li>
+                    <li><a href="#past-roles" class="nav-link">Past Roles</a></li>
+                    <li><a href="#contact" class="nav-link">Contact</a></li>
+                </ul>
+            </nav>
+        </main>
+      
 
         <section id="experience">
             <!-- Tinder Banner ABOVE Tinder Section -->
