--- a/about.html
+++ b/about.html
@@ -9,6 +9,18 @@
     <meta name="author" content="Fernando Caldeira">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/main.js"></script>
+     <!-- ADD THE SCRIPT HERE -->
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Fernando Caldeira",
+        "jobTitle": "Product Manager",
+        "worksFor": "Tinder",
+        "url": "https://fernandocaldeira.info/",
+        "sameAs": ["https://www.linkedin.com/in/fernandonunescaldeira/"]
+        }
+    </script>
 </head>
 <body>
     <!-- Top Navigation -->
