Add Google Analytics tracking code to about.html for improved site analytics

--- a/about.html
+++ b/about.html
@@ -11,6 +11,15 @@
     <meta name="author" content="Fernando Caldeira">
     <meta name="google-site-verification" content="Rpl5PUO5nOta-wb8qrKxGVoTEMdcUbZKutsL-ikaUpc" />
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K0PK833TMN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-K0PK833TMN');
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://fernandocaldeira.com">
