--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     <!-- Top Navigation -->
     <nav class="top-nav">
         <div class="container">
-            <a href="index.html" class="logo">Fernando Caldeira</a>
+            <a href="index.html" class="logo">fernandocaldeira.com</a>
             
             <ul class="top-nav-links">
                 <li><a href="index.html" class="top-nav-link">My Work</a></li>
