Add intro-text class for improved typography and enhance content in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@
         I focus on solving problems at the intersection of design, technology, and business, 
         always aiming for measurable outcomes. I've worked on products with global scale like 
         Tinder and Ablo, where I improved engagement, scaled monetization, and contributed to 
-        record growth. I thrive in fast-moving environments, working closely with engineers, 
+        record growth.
+    </p>
+
+    <p class="intro-text">
+        I thrive in fast-moving environments, working closely with engineers, 
         designers, and data teams to turn ideas into results.
     </p>
     
