Update styles and content in index.html and style.css for improved layout and clarity

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </h1>
     
     <p class="intro-text">
-        From driving monetization at Ablo to spearheading innovation at Tinder, I build products that millions of people love to use. I believe great product management is the art of balancing design empathy with data-driven execution. Based in Portugal, working for the world.
+        From driving monetization at Ablo to spearheading innovation at Tinder, I build products that millions of people love to use. I believe great product management is the art of balancing design empathy with data-driven execution. Based in Portugal, collaborating with distributed teams worldwide.
     </p>
 
     <p class="intro-text">
@@ -267,6 +267,8 @@
             <p class="contact-info">
                 Interested in working together? I'd love to hear about your product challenges and explore how we can create meaningful impact together.
             </p>
+            <p class="contact-location">Based in Lisbon, Portugal — Available for local and global opportunities.</p>
+
             <div class="contact-links">
                 <a href="https://www.linkedin.com/in/fernandonunescaldeira/" target="_blank" class="contact-btn">LinkedIn</a>
             </div>
@@ -280,7 +282,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Fernando Caldeira. Ship fast with care.</p>
+            <p>&copy; 2026 Fernando Caldeira. Work hard and be kind.</p>
         </div>
     </footer>
 
