Update hero section heading line-height and footer text for improved readability and impact

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2026 Fernando Caldeira. Work hard and be kind.</p>
+            <p>&copy; 2026 Fernando Caldeira. Build with grit and kindness.</p>
         </div>
     </footer>
 
